Specify JAVA_OPTS
Instead of committing repeatedly like an idiot. Derp.